minor updates for hf multiple max_tokens fix

--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -7,7 +7,7 @@ enable_telemetry = true
 user_env = []
 
 # Duration (in seconds) during which the session is saved when the connection is lost
-session_timeout = 3600
+session_timeout = 7200  # 2 hours
 
 # Duration (in seconds) of the user session expiry
 user_session_timeout = 1296000  # 15 days
@@ -17,6 +17,11 @@ cache = false
 
 # Authorized origins
 allow_origins = ["*"]
+
+# Enable WebSocket heartbeat to maintain stable connections
+[websocket]
+ping_interval = 25  # Send ping every 25 seconds
+ping_timeout = 120  # Longer timeout for better stability
 
 [features]
 # Process and display HTML in messages. This can be a security risk (see https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript)
